<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
  >

  <RadioGroup 
    android:id="@+id/start_as"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_marginTop="10dp" 
    >

    <RadioButton android:id="@+id/cb_wait"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/yutnori_wait"
       />
    <RadioButton android:id="@+id/cb_join"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/yutnori_join"
       />
     <RadioButton android:id="@+id/cb_android"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/yutnori_android"
       />
  </RadioGroup>


  <LinearLayout android:id="@+id/special_rules"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="5dp" 
    android:gravity="left"
    >
    <!-- CheckBox android:id="@+id/cb_malsplit"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/malsplit"
       / -->
    <CheckBox android:id="@+id/cb_seoul"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/seoul"
       />
    <CheckBox android:id="@+id/cb_busan"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/busan"
       />
    <CheckBox android:id="@+id/cb_backdo"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/backdo"
       />
  </LinearLayout>
  <LinearLayout android:id="@+id/backdo_rules"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="5dp" 
    android:gravity="left"
    >
    <CheckBox android:id="@+id/cb_doskip"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/doskip"
       />
    <CheckBox android:id="@+id/cb_dospot"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/dospot"
       />
    <CheckBox android:id="@+id/cb_docage"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/docage"
       />
  </LinearLayout>

  <LinearLayout 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="0dp" 
    android:background="#ff999999"
    android:weightSum="1.0"
    android:gravity="center" 
    >

    <Button android:id="@+id/btn_help"
        android:layout_width="0dp" 
        android:layout_height="wrap_content" 
        android:layout_weight="0.5"
        android:layout_margin="10dp" 
        android:gravity="center" 
        android:text="@string/menu_help"
    />

    <Button android:id="@+id/btn_ok"
        android:layout_width="0dp" 
        android:layout_height="wrap_content" 
        android:layout_weight="0.5"
        android:layout_margin="10dp" 
        android:gravity="center" 
        android:text="@string/button_ok"
    />


  </LinearLayout>

</LinearLayout>
