<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
  >

  <TextView android:id="@+id/message"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp" 
    android:text=""
    />

  <LinearLayout android:id="@+id/backyuts_nr"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="5dp" 
    android:gravity="left"
    >
    <TextView 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="@string/backyuts"
      />
    <RadioGroup 
      android:id="@+id/backyuts_nr"
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:orientation="horizontal" 
      android:layout_marginTop="10dp" 
      >
      <RadioButton android:id="@+id/cb_one"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content" 
         android:text="@string/backyut_one"
         />
      <RadioButton android:id="@+id/cb_two"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content" 
         android:text="@string/backyut_two"
         />
       <RadioButton android:id="@+id/cb_three"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content" 
         android:text="@string/backyut_three"
         />
    </RadioGroup>
  </LinearLayout>

  <LinearLayout android:id="@+id/special_rules"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="5dp" 
    android:layout_marginTop="8dp" 
    android:gravity="left"
    >
    <!-- CheckBox android:id="@+id/cb_malsplit"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/malsplit"
       / -->
    <CheckBox android:id="@+id/cb_seoul"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/seoul"
       />
    <CheckBox android:id="@+id/cb_busan"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/busan"
       />
    <CheckBox android:id="@+id/cb_backdo"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/backdo"
       />
  </LinearLayout>
  <LinearLayout android:id="@+id/backdo_rules"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="5dp" 
    android:gravity="left"
    >
    <CheckBox android:id="@+id/cb_doskip"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/doskip"
       />
    <CheckBox android:id="@+id/cb_dospot"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/dospot"
       />
    <CheckBox android:id="@+id/cb_docage"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/docage"
       />
  </LinearLayout>

  <LinearLayout 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="0dp" 
    android:background="#ff999999"
    android:weightSum="1.0"
    android:gravity="center" 
    >

    <Button android:id="@+id/btn_quit"
        android:layout_width="0dp" 
        android:layout_height="wrap_content" 
        android:layout_weight="0.5"
        android:layout_margin="10dp" 
        android:gravity="center" 
        android:text="@string/button_quit"
    />

    <Button android:id="@+id/btn_again"
        android:layout_width="0dp" 
        android:layout_height="wrap_content" 
        android:layout_weight="0.5"
        android:layout_margin="10dp" 
        android:gravity="center" 
        android:text="@string/button_again"
    />
  </LinearLayout>

</LinearLayout>
